Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNGc2TEzD83NA26kvvRj1Rh",
+      "authorship_tag": "ABX9TyMmZvNcMz0722W4CGMJglzs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,7 +82,7 @@
       "source": [
         "colab のコードセルの環境で、g++ が使えることがわかる。\n",
         "\n",
-        "これを利用して Colab で C++ を学習する、というアイデア。"
+        "これを利用して Colab でインタラクティブに C++ を学習する、というアイデア。"
       ]
     },
     {
@@ -93,11 +93,11 @@
       "source": [
         "参考テキスト\n",
         "\n",
-        "1. https://www.w3schools.com/cpp/\n",
-        "1. https://www.w3schools.com/cpp/cpp_examples.asp\n",
+        "1. https://www.w3schools.com/cpp/  \n",
+        "w3scoolのC++ Tutorial (実行環境あり)\n",
         "\n",
-        "1. https://www.w3schools.com/cpp/cpp_quiz.asp\n",
-        "\n"
+        "1. https://rinatz.github.io/cpp-book/ch01-02-hello-world/\n",
+        "ゼロから学ぶC++ book形式\n"
       ]
     },
     {
@@ -1027,6 +1027,68 @@
           "text": [
             "60\n",
             "3.14"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fQHrZCjS770U",
+        "outputId": "9ccc191e-08d7-4df8-ffa0-10a413f2d598",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile variable10.cpp\n",
+        "// int num; とだけして出力すると何が入っているか実験\n",
+        "#include <iostream>\n",
+        "#include <string>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  int num1;\n",
+        "  string str1;\n",
+        "  int num2;\n",
+        "  cout << num1 << \"\\n\";\n",
+        "  cout << str1 << \"\\n\";\n",
+        "  cout << num2 << \"\\n\";\n",
+        "  return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting variable10.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cuYmm3yw7-kY",
+        "outputId": "52474329-30eb-4ec3-c8cf-9c83451ddd14",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ variable10.cpp -o variable10; ./variable10"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1200147590\n",
+            "\n",
+            "21968\n"
           ],
           "name": "stdout"
         }
@@ -6047,7 +6109,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6062,15 +6124,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "sXH_yclMnwrK",
-        "outputId": "f83d269e-2229-4b25-eaa7-fae28cf5b476",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f83d269e-2229-4b25-eaa7-fae28cf5b476"
       },
       "source": [
         "!g++ exception01.cpp -o exception01; ./exception01"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6086,10 +6148,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "vasNgg0a8m3i",
-        "outputId": "ca09340d-88b3-419c-c68e-fa97a71ef043",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ca09340d-88b3-419c-c68e-fa97a71ef043"
       },
       "source": [
         "%%writefile exception02.cpp\n",
@@ -6113,7 +6175,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6128,15 +6190,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "s-wwtOHF8ndo",
-        "outputId": "766ddd88-30e4-4919-cc0f-9305facd6de3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "766ddd88-30e4-4919-cc0f-9305facd6de3"
       },
       "source": [
         "!g++ exception02.cpp -o exception02; ./exception02"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6151,10 +6213,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "WjmnyJNM8_zi",
-        "outputId": "58b3cd59-4b39-469e-c2b2-a7539eb7a48b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "58b3cd59-4b39-469e-c2b2-a7539eb7a48b"
       },
       "source": [
         "%%writefile exception03.cpp\n",
@@ -6179,7 +6241,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6194,15 +6256,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "Tzx3ZsOv8_nF",
-        "outputId": "0d088459-ee24-4c18-ceac-443e6b279b0e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0d088459-ee24-4c18-ceac-443e6b279b0e"
       },
       "source": [
         "!g++ exception03.cpp -o exception03; ./exception03"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6218,10 +6280,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "OZN2Bu5A9WqA",
-        "outputId": "415f53b1-1536-4c84-b39e-7f513abfce52",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "415f53b1-1536-4c84-b39e-7f513abfce52"
       },
       "source": [
         "%%writefile exception04.cpp\n",
@@ -6244,7 +6306,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6259,15 +6321,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "7q_edc0-9Wb9",
-        "outputId": "5d3d4088-6960-442c-c2bd-658ff7cda077",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5d3d4088-6960-442c-c2bd-658ff7cda077"
       },
       "source": [
         "!g++ exception04.cpp -o exception04; ./exception04"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6279,13 +6341,87 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "7HTN_IYM_iKD"
+        "id": "9wl8EJ3m4pt2",
+        "outputId": "546e70d5-8cf2-4680-c904-a9b9a8268c1c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# いまここ"
+        "%%writefile add01.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  int x = 5;\n",
+        "  int y = 6;\n",
+        "  int sum = x + y;\n",
+        "  cout << sum;\n",
+        "  return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing add01.cpp\n"
+          ],
+          "name": "stdout"
+        }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KAS06TYN4pjE",
+        "outputId": "1f1f42ec-2d52-4aa7-89d0-e141a462dfb5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ add01.cpp -o add01; ./add01"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "11"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b__3S-ZD4sis"
+      },
+      "source": [
+        "%%script false\n",
+        "\n",
+        "#include <iostream>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  int x, y;\n",
+        "  int sum;\n",
+        "  cout << \"Type a number: \";\n",
+        "  cin >> x;\n",
+        "  cout << \"Type another number: \";\n",
+        "  cin >> y;\n",
+        "  sum = x + y;\n",
+        "  cout << \"Sum is: \" << sum;\n",
+        "  return 0;\n",
+        "}"
+      ],
+      "execution_count": 3,
+      "outputs": []
     }
   ]
 }
