--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMmZvNcMz0722W4CGMJglzs",
+      "authorship_tag": "ABX9TyOp0qmfcKhIQ8Tpld8e2SUN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,8 +96,8 @@
         "1. https://www.w3schools.com/cpp/  \n",
         "w3scoolのC++ Tutorial (実行環境あり)\n",
         "\n",
-        "1. https://rinatz.github.io/cpp-book/ch01-02-hello-world/\n",
-        "ゼロから学ぶC++ book形式\n"
+        "1. https://rinatz.github.io/cpp-book/ch01-02-hello-world/  \n",
+        "ゼロから学ぶC++ (book形式)\n"
       ]
     },
     {
@@ -1035,11 +1035,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fQHrZCjS770U",
-        "outputId": "9ccc191e-08d7-4df8-ffa0-10a413f2d598",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fQHrZCjS770U",
+        "outputId": "9ccc191e-08d7-4df8-ffa0-10a413f2d598"
       },
       "source": [
         "%%writefile variable10.cpp\n",
@@ -1072,11 +1072,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cuYmm3yw7-kY",
-        "outputId": "52474329-30eb-4ec3-c8cf-9c83451ddd14",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cuYmm3yw7-kY",
+        "outputId": "52474329-30eb-4ec3-c8cf-9c83451ddd14"
       },
       "source": [
         "!g++ variable10.cpp -o variable10; ./variable10"
@@ -6343,11 +6343,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9wl8EJ3m4pt2",
-        "outputId": "546e70d5-8cf2-4680-c904-a9b9a8268c1c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9wl8EJ3m4pt2",
+        "outputId": "546e70d5-8cf2-4680-c904-a9b9a8268c1c"
       },
       "source": [
         "%%writefile add01.cpp\n",
@@ -6377,11 +6377,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KAS06TYN4pjE",
-        "outputId": "1f1f42ec-2d52-4aa7-89d0-e141a462dfb5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KAS06TYN4pjE",
+        "outputId": "1f1f42ec-2d52-4aa7-89d0-e141a462dfb5"
       },
       "source": [
         "!g++ add01.cpp -o add01; ./add01"
