Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN9NvfcoVmeyCnbvh4sjD0e",
+      "authorship_tag": "ABX9TyOoGEfg9lOlxjm3rO/0yLxo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -243,21 +243,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2720eca2-f823-4035-8998-d6f48c7a377c"
+        "outputId": "55bb9b78-59d6-4151-bcdc-7bd72d4ca8da"
       },
       "source": [
         "# 実験\n",
         "%%writefile hello02.cpp\n",
-        "// hello02.cpp\n",
         "#include <iostream>\n",
-        "\n",
         "int main() {\n",
         "  std::cout << \"hello world\\n \\t初めてのC++\" << std::endl;\n",
         "  std::cout << \"次の行\";\n",
         "  return 0;\n",
         "}"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -315,12 +313,11 @@
       },
       "source": [
         "%%writefile hello03.cpp\n",
-        "// hello03.cpp\n",
         "#include <iostream>\n",
         "using namespace std;\n",
         "\n",
         "int main() {\n",
-        "  for (int i = 0; i < 10; i++) cout << \"Hello World\" << endl;\n",
+        "  for (int i = 0; i < 10; i++) cout << \"Hello World\" << \"\\n\";\n",
         "}\n"
       ],
       "execution_count": null,
@@ -447,7 +444,6 @@
       },
       "source": [
         "%%writefile hello04.cpp\n",
-        "// hello04.cpp\n",
         "#include <iostream>\n",
         "using namespace std;\n",
         "\n",
@@ -501,6 +497,15 @@
       "source": [
         "`<< endl` でも改行は入れられるが、`\\n` の方がわかりやすいので自分で書くときは `\\n` を使う。\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OzkYh65OGHNq"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
