Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOoGEfg9lOlxjm3rO/0yLxo",
+      "authorship_tag": "ABX9TyN0aCVrLNlgS5y80z3BGD/q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -255,7 +255,7 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6493,6 +6493,311 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YWsIYiPoNc2w"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rMoZBbDnMWWv"
+      },
+      "source": [
+        "# その他 miscellaneous"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DeMOjhEZNCyy"
+      },
+      "source": [
+        "## sort "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ESksa-pMNF1s",
+        "outputId": "e87a76bf-1a21-4746-b5d5-b73b9378e26f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile sort01.cpp\n",
+        "\n",
+        "#include <algorithm>\n",
+        "#include <iostream>\n",
+        "using namespace std;\n",
+        "int main() {\n",
+        "  int array[] = { 23, 5, -10, 0, 0, 321, 1, 2, 99, 30 };\n",
+        "  size_t size = sizeof(array) / sizeof(array[0]); \n",
+        "  sort(array, array + size);\n",
+        "  for (size_t i = 0; i < size; ++i) {\n",
+        "     cout << array[i] << ' ';\n",
+        "  }\n",
+        "  cout << endl;\n",
+        "}"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing sort01.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GKPRaWqGNK6t",
+        "outputId": "09ddd61d-2794-4f30-e052-06bb94331055",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ sort01.cpp -o sort01; ./sort01"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "-10 0 0 1 2 5 23 30 99 321 \n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jpWxNKiKNJY6",
+        "outputId": "4cb35c36-bc3d-422f-eb3a-ce46f2533d76",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile sort02.cpp\n",
+        "\n",
+        "#include <algorithm>\n",
+        "#include <iostream>\n",
+        "#include <vector>\n",
+        "using namespace std;\n",
+        "int main() {\n",
+        "  vector<int> vec { 23, 5, -10, 0, 0, 321, 1, 2, 99, 30 };\n",
+        "  sort(vec.begin(), vec.end());\n",
+        "  for (int i = 0; i < vec.size(); ++i) {\n",
+        "     cout << vec[i] << ' ';\n",
+        "  }\n",
+        "  cout << endl;\n",
+        "}"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing sort02.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W6redAJ1N4nN",
+        "outputId": "19751d74-b0d2-48ec-b8ec-8fd1505665ca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ sort02.cpp -o sort02; ./sort02"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "-10 0 0 1 2 5 23 30 99 321 \n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hhOG4DUnOp61",
+        "outputId": "f88240f8-8420-4660-b7ba-a0c7d8045d83",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile sort03.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "#include <boost/foreach.hpp>\n",
+        "#include <vector>\n",
+        "#include <algorithm>\n",
+        "using namespace std;\n",
+        " \n",
+        "void\n",
+        "dump(vector<int>& v)\n",
+        "{\n",
+        "        BOOST_FOREACH(int x, v) {\n",
+        "                cout << x << endl;\n",
+        "        }\n",
+        "}\n",
+        " \n",
+        "int\n",
+        "main (int argc, char *argv[])\n",
+        "{\n",
+        "        vector<int> v;\n",
+        " \n",
+        "        v.push_back ( 3 );\n",
+        "        v.push_back ( 4 );\n",
+        "        v.push_back ( 1 );\n",
+        "        v.push_back ( 2 );\n",
+        " \n",
+        "        cout << \"Before sort\" << std::endl;\n",
+        "        dump (v);\n",
+        " \n",
+        "        std::sort(v.begin(), v.end() );\n",
+        " \n",
+        "        cout << \"After sort\" << std::endl;\n",
+        "        dump (v);\n",
+        "        return 0;\n",
+        "}"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing sort03.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zzUci1vXOp1Z"
+      },
+      "source": [
+        "!g++ sort03.cpp -o sort03; ./sort03"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ph5fdv_KPTVc",
+        "outputId": "48c6425c-1f85-4b37-bfba-ef5ace21576c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile sort04.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "#include <boost/foreach.hpp>\n",
+        "#include <vector>\n",
+        "#include <algorithm>\n",
+        " \n",
+        "using namespace std;\n",
+        " \n",
+        "void\n",
+        "dump(vector<int>& v)\n",
+        "{\n",
+        "        BOOST_FOREACH(int x, v) {\n",
+        "                cout << x << endl;\n",
+        "        }\n",
+        "}\n",
+        " \n",
+        "int\n",
+        "main (int argc, char *argv[])\n",
+        "{\n",
+        "        vector<int> v;\n",
+        " \n",
+        "        v.push_back ( 3 );\n",
+        "        v.push_back ( 4 );\n",
+        "        v.push_back ( 1 );\n",
+        "        v.push_back ( 2 );\n",
+        " \n",
+        "        cout << \"Before sort\" << std::endl;\n",
+        "        dump (v);\n",
+        " \n",
+        "        std::sort(v.begin(), v.end(), std::greater<int>() );\n",
+        " \n",
+        "        cout << \"After sort\" << std::endl;\n",
+        "        dump (v);\n",
+        "        return 0;\n",
+        "}"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing sort04.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eBcfciPHPTIy",
+        "outputId": "3ab63fe8-2256-42f1-ed31-2ab3087c4046",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ sort04.cpp -o sort04; ./sort04"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Before sort\n",
+            "3\n",
+            "4\n",
+            "1\n",
+            "2\n",
+            "After sort\n",
+            "4\n",
+            "3\n",
+            "2\n",
+            "1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
