Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN0aCVrLNlgS5y80z3BGD/q",
+      "authorship_tag": "ABX9TyMHxgRmm44rSDWSMsB/TabO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -497,15 +497,6 @@
       "source": [
         "`<< endl` でも改行は入れられるが、`\\n` の方がわかりやすいので自分で書くときは `\\n` を使う。\n",
         "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "OzkYh65OGHNq"
-      },
-      "source": [
-        "# いまここ"
       ]
     },
     {
@@ -1047,11 +1038,11 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fQHrZCjS770U",
-        "outputId": "9ccc191e-08d7-4df8-ffa0-10a413f2d598"
+        "outputId": "4c177695-d3d6-4a0b-db49-07839589cde4"
       },
       "source": [
+        "# int num; とだけして出力すると何が入っているか実験\n",
         "%%writefile variable10.cpp\n",
-        "// int num; とだけして出力すると何が入っているか実験\n",
         "#include <iostream>\n",
         "#include <string>\n",
         "using namespace std;\n",
@@ -1066,12 +1057,12 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Overwriting variable10.cpp\n"
+            "Writing variable10.cpp\n"
           ],
           "name": "stdout"
         }
@@ -1084,19 +1075,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cuYmm3yw7-kY",
-        "outputId": "52474329-30eb-4ec3-c8cf-9c83451ddd14"
+        "outputId": "fcd3c11a-2092-4c0f-fbbc-4dedbb9dcced"
       },
       "source": [
         "!g++ variable10.cpp -o variable10; ./variable10"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "1200147590\n",
+            "1242713222\n",
             "\n",
-            "21968\n"
+            "21921\n"
           ],
           "name": "stdout"
         }
@@ -1109,35 +1100,12 @@
       },
       "source": [
         "# input\n",
-        "インプットについては、`cin` というのを使うが、Colab 環境ではやらない。\n",
+        "インプットについては、`cin` で標準入力を受け付ける。\n",
         "\n",
-        "次のような内容のファイルを実行すると、インプット待ちになってしまう。"
+        "次のプログラムは本来はインタラクティブにユーザーが数字を入力することを想定しているが、Colab のコードセルでは、インプット待ちになってしまい具合が悪い。\n",
+        "\n",
+        "実行例のように、echo とパイプで入力する数字を明示的にプログラムに渡す方法とする。"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "d2mAJMYl_Gx3"
-      },
-      "source": [
-        "%%script false\n",
-        "#include <iostream>\n",
-        "using namespace std;\n",
-        "\n",
-        "int main() {\n",
-        "  int x, y;\n",
-        "  int sum;\n",
-        "  cout << \"Type a number: \";\n",
-        "  cin >> x;\n",
-        "  cout << \"Type another number: \";\n",
-        "  cin >> y;\n",
-        "  sum = x + y;\n",
-        "  cout << \"Sum is: \" << sum;\n",
-        "  return 0;\n",
-        "}"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1146,12 +1114,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b02d98f4-034a-4b8c-d9da-894de39826e7"
+        "outputId": "74b02e9b-cb2e-4c0c-e5e4-20c3a0b7dcfc"
       },
       "source": [
-        "# 実験\n",
         "%%writefile input01.cpp\n",
-        "\n",
         "#include <iostream>\n",
         "using namespace std;\n",
         "\n",
@@ -1167,7 +1133,7 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -1185,13 +1151,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8dd847be-2c14-4c30-f089-4a5146928f55"
+        "outputId": "100a2761-bd46-4ebb-8f97-9cfcdd52e0cd"
       },
       "source": [
-        "!g++ input01.cpp -o input01\n",
-        "!echo \"3\" \"4\" | ./input01"
+        "!g++ input01.cpp -o input01; echo 3 4 | ./input01"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -1209,6 +1174,15 @@
       },
       "source": [
         "# データタイプ\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "s3KkgejZk-ay"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
@@ -6527,10 +6501,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ESksa-pMNF1s",
-        "outputId": "e87a76bf-1a21-4746-b5d5-b73b9378e26f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e87a76bf-1a21-4746-b5d5-b73b9378e26f"
       },
       "source": [
         "%%writefile sort01.cpp\n",
@@ -6548,7 +6522,7 @@
         "  cout << endl;\n",
         "}"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6563,15 +6537,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "GKPRaWqGNK6t",
-        "outputId": "09ddd61d-2794-4f30-e052-06bb94331055",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "09ddd61d-2794-4f30-e052-06bb94331055"
       },
       "source": [
         "!g++ sort01.cpp -o sort01; ./sort01"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6586,10 +6560,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "jpWxNKiKNJY6",
-        "outputId": "4cb35c36-bc3d-422f-eb3a-ce46f2533d76",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4cb35c36-bc3d-422f-eb3a-ce46f2533d76"
       },
       "source": [
         "%%writefile sort02.cpp\n",
@@ -6607,7 +6581,7 @@
         "  cout << endl;\n",
         "}"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6622,15 +6596,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "W6redAJ1N4nN",
-        "outputId": "19751d74-b0d2-48ec-b8ec-8fd1505665ca",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "19751d74-b0d2-48ec-b8ec-8fd1505665ca"
       },
       "source": [
         "!g++ sort02.cpp -o sort02; ./sort02"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6645,10 +6619,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "hhOG4DUnOp61",
-        "outputId": "f88240f8-8420-4660-b7ba-a0c7d8045d83",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f88240f8-8420-4660-b7ba-a0c7d8045d83"
       },
       "source": [
         "%%writefile sort03.cpp\n",
@@ -6687,7 +6661,7 @@
         "        return 0;\n",
         "}"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6713,10 +6687,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ph5fdv_KPTVc",
-        "outputId": "48c6425c-1f85-4b37-bfba-ef5ace21576c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "48c6425c-1f85-4b37-bfba-ef5ace21576c"
       },
       "source": [
         "%%writefile sort04.cpp\n",
@@ -6756,7 +6730,7 @@
         "        return 0;\n",
         "}"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6771,15 +6745,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "eBcfciPHPTIy",
-        "outputId": "3ab63fe8-2256-42f1-ed31-2ab3087c4046",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3ab63fe8-2256-42f1-ed31-2ab3087c4046"
       },
       "source": [
         "!g++ sort04.cpp -o sort04; ./sort04"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
