Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMtTyL9s01rkSavkaCpGgTm",
+      "authorship_tag": "ABX9TyOE3STK5PqJ+lwc1gyzal5G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7045,11 +7045,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3tnB25w1zrxL",
-        "outputId": "7b56929b-d139-42cd-aa3a-bcd24dc6d303",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3tnB25w1zrxL",
+        "outputId": "7b56929b-d139-42cd-aa3a-bcd24dc6d303"
       },
       "source": [
         "%%writefile functionpointer01.cpp\n",
@@ -7081,11 +7081,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hxa_wTdV0GCp",
-        "outputId": "6fd295ca-8211-4d83-9e6d-00331448b4cc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hxa_wTdV0GCp",
+        "outputId": "6fd295ca-8211-4d83-9e6d-00331448b4cc"
       },
       "source": [
         "!g++ functionpointer01.cpp -o functionpointer01; ./functionpointer01"
@@ -7104,11 +7104,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UfSNvmIw0P9w",
-        "outputId": "d36a89d1-af3f-4880-c008-99026f2f937a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UfSNvmIw0P9w",
+        "outputId": "d36a89d1-af3f-4880-c008-99026f2f937a"
       },
       "source": [
         "%%writefile functionpointer02.cpp\n",
@@ -7140,11 +7140,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "R5u8ZcTw0lT2",
-        "outputId": "940ab34a-0b5f-45cc-efd2-1a40b802d917",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "R5u8ZcTw0lT2",
+        "outputId": "940ab34a-0b5f-45cc-efd2-1a40b802d917"
       },
       "source": [
         "!g++ functionpointer02.cpp -o functionpointer02; ./functionpointer02"
@@ -7172,24 +7172,57 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AeNX7Mf604JS"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AeNX7Mf604JS",
+        "outputId": "b4f0497c-8d7e-4311-bf37-8194732c7ef1"
       },
       "source": [
-        ""
+        "%%writefile lambda01.cpp\n",
+        "#include <iostream>\n",
+        "\n",
+        "int main() {\n",
+        "    // auto 変数名 = [ キャプチャ ]( 引数リスト ) -> 戻り値の型 { 処理内容 };\n",
+        "    auto func = [](int a, int b) -> int { return a + b; };  // int を2つ受け取り、足した結果を返すラムダ式\n",
+        "\n",
+        "    int result = func(4, 6);\n",
+        "    std::cout << result << std::endl;  // 10\n",
+        "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing lambda01.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DxpK77U703aY"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DxpK77U703aY",
+        "outputId": "25d110c2-8082-440f-a73e-2cc712b7c749"
       },
       "source": [
-        ""
+        "!g++ lambda01.cpp -o lambda01; ./lambda01"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
